--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="public/screenshot-1.png" alt="On-demand">
+                        <img src="screenshot-1.png" alt="On-demand">
                     </div>
                     <h3>On-demand</h3>
                     <p>Save 90% of engineering & recruitment bandwidth, outsource candidate interviews to us</p>
@@ -237,7 +237,7 @@
                 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="public/screenshot-2.png" alt="Live interviews">
+                        <img src="screenshot-2.png" alt="Live interviews">
                     </div>
                     <h3>Live interviews</h3>
                     <p>Access candidates in real-time with our live coding environment & integrated video calls</p>
@@ -246,7 +246,7 @@
                 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="public/screenshot-3.png.png" alt="Assessments">
+                        <img src="screenshot-3.png.png" alt="Assessments">
                     </div>
                     <h3>Assessments</h3>
                     <p>Share assessments across batches with MCQ, Programming and Subjective questions.</p>
