--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="images/screenshot-3.png.png" alt="Assessments">
+                        <img src="images/screenshot-3.png" alt="Assessments">
                     </div>
                     <h3>Assessments</h3>
                     <p>Share assessments across batches with MCQ, Programming and Subjective questions.</p>
